# rp-lua-shell

./: Cargo.toml  LICENSE  README.md  build.rs  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.cspell/: custom-dictionary-workspace.txt
lua-5.4.8/src/: linit.c
src/: alloc.rs  console_ldd.rs  lua.rs  main.rs  syscalls.rs
