[package]
name = "rp-example"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-rp = { version = "0.8.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-executor = { version = "0.9.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
emballoc = { version = "0.3", features = ["portable_atomic"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }

[profile.release]
debug = true

[build-dependencies]
cc = "1.2.40"
